@startuml
' Entidades y atributos clave
class Users {
  * _id : ObjectId
  * usuario : String
  * nombre : String
  * email : String
  * perfil : Number
}

class Suppliers {
  * _id : ObjectId
  * codigo : Number
  * nombre : String
  * usuario : String
}

class Products {
  * _id : ObjectId
  * codigo : Number
  * descrip : String
  * unidad : String
  * proveedor : Number
}

class MyProducts {
  * _id : ObjectId
  * usuario : String
  * proveedor : Number
  * codigo : Number
}

class Offers {
  * _id : ObjectId
  * oferta : Number
  * licitacion_id : String
  * usuario : String
  * proveedor : Number
  * producto : Number
  * precio : Number
  * estado : Number
}

class Tenders {
  * _id : ObjectId
  * licitacion : String
  * fecha : Date
  * finaliza : Date
}

class Uploads {
  * _id : ObjectId
  * fileType : String
  * originalName : String
  * filename : String
  * fileId : String
  * usuario : String
  * offer : Number
}

class Samples {
  * _id : ObjectId
  * muestra : Number
  * usuario : String
  * proveedor : Number
  * producto : Number
  * cantidad : Number
}

class SettingScorings {
  * _id : ObjectId
  * codigo : Number
  * nombre : String
  * peso : Number
}

class MailsToSuppliers {
  * _id : ObjectId
  * licitacion : String
  * producto : Number
  * proveedor : Number
  * email : String
}

' Relaciones (multiplicidad)
Suppliers --> Products : "proveedor (Products.proveedor -> Suppliers.codigo)"
Suppliers --> MyProducts : "proveedor"
Products --> Offers : "producto"
Suppliers --> Offers : "proveedor"
Users --> Offers : "usuario"
Tenders --> Offers : "offers (Tenders.offer -> Offers._id)"
Offers --> Uploads : "upload references (Offers.upload)"
Suppliers --> Uploads : "supplier uploads"
Products --> Samples : "producto"
Suppliers --> Samples : "proveedor"
SettingScorings ||..|| Suppliers : "evaluación (lógica externa)"
MailsToSuppliers --> Suppliers : "destinatario proveedor"

@enduml
